Fix the 07-flex-layout
we add a flex-container to hold the sidebar and the newly added 'text' container

we add flexbox to the body to match the viewport

we add flex-1 to the flex-container to make it take the whole space between header and footer

we add flex-shrink:0 to sidebar to prevent it from being squashed

--- a/foundations/flex/07-flex-layout-2/solution/solution.css
+++ b/foundations/flex/07-flex-layout-2/solution/solution.css
@@ -60,7 +60,7 @@ ul {
 }
 
 li {
-  margin-bottom: 16px;
+  padding: 8px;
 }
 
 a {
